--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.spikhalskiy</groupId>
     <artifactId>exception-tracer</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
     <name>Java Exception Tracer</name>
     <description>Java Exception Tracer</description>
@@ -23,7 +23,7 @@
         <connection>scm:git:git@github.com:Spikhalskiy/java-exception-tracer.git</connection>
         <developerConnection>scm:git:git@github.com:Spikhalskiy/java-exception-tracer.git</developerConnection>
         <url>scm:git:git@github.com:Spikhalskiy/java-exception-tracer.git</url>
-        <tag>HEAD</tag>
+        <tag>v0.1.0</tag>
     </scm>
 
     <properties>
